--- a/TestHarness/TestHarness.csproj
+++ b/TestHarness/TestHarness.csproj
@@ -44,9 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileComparer.cs" />
     <Compile Include="MapperTask.cs" />
     <Compile Include="PayrollExchangeUploadBodTask.cs" />
     <Compile Include="SQLTask.cs" />
+    <Compile Include="Task.cs" />
     <Compile Include="TestSuite.cs" />
     <Compile Include="UnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
