--- a/TestRunner/TestRunner.csproj
+++ b/TestRunner/TestRunner.csproj
@@ -56,8 +56,20 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MapperResultForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MapperResultForm.Designer.cs">
+      <DependentUpon>MapperResultForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLResultForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SQLResultForm.Designer.cs">
+      <DependentUpon>SQLResultForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UnitTestForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +78,12 @@
     </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MapperResultForm.resx">
+      <DependentUpon>MapperResultForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SQLResultForm.resx">
+      <DependentUpon>SQLResultForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UnitTestForm.resx">
       <DependentUpon>UnitTestForm.cs</DependentUpon>
