--- a/TestRunner/TestRunner.csproj
+++ b/TestRunner/TestRunner.csproj
@@ -77,6 +77,12 @@
     <Compile Include="TestCaseForm.Designer.cs">
       <DependentUpon>TestCaseForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="XmlTransformResultForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="XmlTransformResultForm.Designer.cs">
+      <DependentUpon>XmlTransformResultForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -99,6 +105,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="XmlTransformResultForm.resx">
+      <DependentUpon>XmlTransformResultForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
