--- a/XmlTransform/XmlTransform.csproj
+++ b/XmlTransform/XmlTransform.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{494DBA5D-5FE6-4536-BD1A-8D1341A3AE08}</ProjectGuid>
+    <ProjectGuid>{3E882C78-ACDA-4F93-AE6C-D97AF7E96FF0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestHarness</RootNamespace>
-    <AssemblyName>TestHarness</AssemblyName>
+    <RootNamespace>XmlTransform</RootNamespace>
+    <AssemblyName>XmlTransform</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,52 +31,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CsvHelper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
-      <HintPath>..\packages\CsvHelper.2.16.3.0\lib\net45\CsvHelper.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common.cs" />
-    <Compile Include="FileComparer.cs" />
-    <Compile Include="Tasks\MapperTask.cs" />
-    <Compile Include="Tasks\PayrollExchangeUploadBodTask.cs" />
-    <Compile Include="Tasks\SQLTask.cs" />
-    <Compile Include="Tasks\Task.cs" />
-    <Compile Include="Tasks\XmlTransformTask.cs" />
-    <Compile Include="TestCase.cs" />
-    <Compile Include="TestGroup.cs" />
-    <Compile Include="TestItem.cs" />
-    <Compile Include="TestOutputFileNameGenerator.cs" />
-    <Compile Include="TestSuite.cs" />
-    <Compile Include="UnitTest.cs" />
+    <Compile Include="XmlTransform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestHarnessReader.cs" />
-    <Compile Include="TestHarnessWriter.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Mapper\Mapper.csproj">
-      <Project>{e51b367e-0e15-4659-95db-253fc01689ea}</Project>
-      <Name>Mapper</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PayrollExchange\PayrollExchange.csproj">
-      <Project>{8ab6baf6-0ff2-4e39-ac12-a13643c57057}</Project>
-      <Name>PayrollExchange</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\XmlTransform\XmlTransform.csproj">
-      <Project>{3e882c78-acda-4f93-ae6c-d97af7e96ff0}</Project>
-      <Name>XmlTransform</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
