--- a/TestHarness/TestHarness.csproj
+++ b/TestHarness/TestHarness.csproj
@@ -46,6 +46,10 @@
   <ItemGroup>
     <Compile Include="Common.cs" />
     <Compile Include="FileComparer.cs" />
+    <Compile Include="IO\Interfaces.cs" />
+    <Compile Include="IO\JUnitTestResultWriter.cs" />
+    <Compile Include="IO\XmlTestResultWriter.cs" />
+    <Compile Include="IO\XmlTestSuiteLoader.cs" />
     <Compile Include="Tasks\MapperTask.cs" />
     <Compile Include="Tasks\PayrollExchangeUploadBodTask.cs" />
     <Compile Include="Tasks\SQLTask.cs" />
@@ -58,8 +62,6 @@
     <Compile Include="TestSuite.cs" />
     <Compile Include="UnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestHarnessReader.cs" />
-    <Compile Include="TestHarnessWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mapper\Mapper.csproj">
